added pypr configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,8 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+plugin = /home/sam/.config/hypr/plugins/hyprscroller.so
+#  plugin = /home/sam/.config/hypr/plugins/hyprslidr.so
 
 ################
 ### MONITORS ###
@@ -39,7 +41,10 @@ xwayland {
 # Set programs that you use
 $terminal = foot
 $fileManager = pcmanfm
-$menu = wofi --show drun,run
+$menuApp = rofi
+#$menu = wofi --show drun,run
+$menu = rofi -show drun
+$browser = vivaldi
 
 
 #################
@@ -52,8 +57,12 @@ $menu = wofi --show drun,run
 # for gnome, etc, start dbus and activate sessions
 exec-once = dbus-update-activation-environment --all &
 
+# to use pyprland, https://hyprland-community.github.io/pyprland/
+exec-once = pypr --debug /tmp/pypr.log
+
 # use gnome-keyring for session auth stuff
 exec-once = gnome-keyring-daemon --start --components=secrets &
+exec-once = /usr/libexec/polkit-gnome-authentication-agent-1 
 
 # use pywal16 for theming and launch wallpaper manager
 exec-once = wal -R & hyprpaper &
@@ -64,12 +73,20 @@ exec-once = ags -c ~/.config/ags/config.js & hyprland-autoname-workspaces &
 # start systray applets here
 exec-once = nm-applet &
 
-# listen for clipboard changes
+# listen for clipboard changes with cliphist
 exec-once = wl-paste --watch cliphist store
+bind = SUPER, V, exec, cliphist list | $menuApp -dmenu | cliphist decode | wl-copy
 
-# start login session with terminal and browser
+
+# this is to enable the clipse clipbard manager and TUI
+exec-once = clipse -listen
+# windowrulev2 = float, class:(clipse)
+# windowrulev2 = size 622 652, class:(clipse)
+# bind = SUPER, V, exec, alacritty --class clipse -e clipse  
+
+# startup apps: terminal, browser
 exec-once = $terminal
-exec-once = zed & thorium-browser &
+exec-once = zed & $browser &
 
 
 #############################
@@ -79,24 +96,34 @@ exec-once = zed & thorium-browser &
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 
+#############################
+###     NVIDIA SETUP      ###
+#############################
 # for NVidia 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,Sway
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
+# env = XDG_SESSION_TYPE,Sway
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
-# for NVidia VA-API video acceleration
-env = NVD_BACKEND,direct
+## for NVidia VA-API video acceleration
+# env = NVD_BACKEND,direct
 
-# for flickering in electron apps
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+## for flickering in electron apps, on Nv cards
+# env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-# disable hardware cursors. they are unstable on nvidia
-cursor {
-    no_hardware_cursors = true
-}
+## disable hardware cursors. they are unstable on nvidia
+# cursor {
+#     no_hardware_cursors = true
+# }
+
+#############################
+###     AMDGPU SETUP      ###
+#############################
+env = AQ_DRM_DEVICES,/dev/dri/card1:/dev/dri/card2
+# env = LIBVA_DRIVER_NAME,amdgpu
+# env = GBM_BACKEND,nvidia-drm
 
 
 #####################
@@ -104,6 +131,11 @@ cursor {
 #####################
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
+
+# NOTE: some apps  need this to work properly (notably Zed)
+render {
+    explicit_sync = 0
+}
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
@@ -121,7 +153,9 @@ general {
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
+    
+    # layout = slidr
+    # layout = scroller
     layout = dwindle
 }
 
@@ -228,7 +262,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -288,6 +322,20 @@ binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK
 binde =, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
 binde =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 binde =, XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+
+# these are for pypr. 
+bind = $mainMod SHIFT, Z, exec, pypr zoom
+bind = $mainMod ALT, P,exec, pypr toggle_dpms
+bind = $mainMod SHIFT, O, exec, pypr shift_monitors +1
+# bind = $mainMod, B, exec, pypr expose
+bind = $mainMod, B, exec, pypr fetch_client_menu
+bind = $mainMod, K, exec, pypr change_workspace +1
+bind = $mainMod, J, exec, pypr change_workspace -1
+bind = $mainMod,L,exec, pypr toggle_dpms
+bind = $mainMod SHIFT,M,exec,pypr toggle stb stb-logs
+bind = $mainMod,A,exec,pypr toggle term
+bind = $mainMod,XF86AudioRaiseVolume,exec,pypr toggle volume
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
