add cliphist support

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -79,7 +79,7 @@ bind = SUPER, V, exec, cliphist list | $menuApp -dmenu | cliphist decode | wl-co
 
 
 # this is to enable the clipse clipbard manager and TUI
-exec-once = clipse -listen
+# exec-once = clipse -listen
 # windowrulev2 = float, class:(clipse)
 # windowrulev2 = size 622 652, class:(clipse)
 # bind = SUPER, V, exec, alacritty --class clipse -e clipse  
